--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "axios": "^1.10.0",
+    "dayjs": "^1.11.13",
     "firebase": "^11.10.0",
     "phosphor-react": "^1.4.1",
     "react": "^19.1.0",
