--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@mantine/core": "^8.1.3",
+    "@mantine/dates": "^8.1.3",
+    "@mantine/hooks": "^8.1.3",
     "axios": "^1.10.0",
     "dayjs": "^1.11.13",
     "firebase": "^11.10.0",
@@ -26,6 +29,9 @@
     "@types/react-dom": "^19.1.6",
     "@types/react-router-dom": "^5.3.3",
     "@vitejs/plugin-react": "^4.5.2",
+    "postcss": "^8.5.6",
+    "postcss-preset-mantine": "^1.18.0",
+    "postcss-simple-vars": "^7.0.1",
     "typescript": "~5.8.3",
     "vite": "^7.0.0"
   }
